Bug 1967169 - Explicitly set layout.scroll.disable-pixel-alignment to test_offsets.html. r=dlrobertson
Differential Revision: https://phabricator.services.mozilla.com/D249924

UltraBlame original commit: ba77d6de73e705ab6c3d911fad0b098dd4345e75

--- a/dom/tests/mochitest/general/test_offsets.html
+++ b/dom/tests/mochitest/general/test_offsets.html
@@ -182,22 +182,6 @@ id
 "
 body
 "
-onload
-=
-"
-setTimeout
-(
-testElements
-0
-'
-testelements
-'
-SimpleTest
-.
-finish
-)
-;
-"
 style
 =
 "
@@ -1322,6 +1306,57 @@ SimpleTest
 waitForExplicitFinish
 (
 )
+;
+window
+.
+onload
+=
+async
+(
+)
+=
+>
+{
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+layout
+.
+scroll
+.
+disable
+-
+pixel
+-
+alignment
+"
+true
+]
+]
+}
+)
+;
+setTimeout
+(
+testElements
+0
+'
+testelements
+'
+SimpleTest
+.
+finish
+)
+;
+}
 ;
 <
 /
