Bug 1871881 - [devtools] Fix Inspector selector search using functional pseudo classes. r=devtools-reviewers,jdescottes.
In walker.js, for the selector search, we want to avoid calling `querySelectorAll` if the search
query is a simple tagname, as those are already retrieved in `_searchIndex`.
The regex that was used to check if we had a complex selector was wrong and would fail to
detect selector with pseudo class (e.g. `section:has(button)`).
We fix this by checking if the query does look like a tagname (only includes a-z chars and -),
and we add another check to see if the query is a valid selector, using `CSS.supports`.

Differential Revision: https://phabricator.services.mozilla.com/D250128

UltraBlame original commit: 92ddaa0e20b2a487113f158effdd5ae1d88f7971

--- a/devtools/server/tests/browser/inspector-search-data.html
+++ b/devtools/server/tests/browser/inspector-search-data.html
@@ -332,6 +332,55 @@ id
 div
 >
 <
+aside
+>
+<
+article
+>
+<
+p
+>
+<
+/
+p
+>
+<
+/
+article
+>
+<
+article
+>
+<
+span
+>
+<
+/
+span
+>
+<
+/
+article
+>
+<
+article
+>
+<
+p
+>
+<
+/
+p
+>
+<
+/
+article
+>
+<
+/
+aside
+>
+<
 /
 body
 >
