Bug 1955060 - Allow using BigInt64Array etc. in WebIDL. r=webidl,smaug
Differential Revision: https://phabricator.services.mozilla.com/D243473

UltraBlame original commit: 1781a48f69a82bb6f5bbe83489b52fa776ab3789

--- a/dom/bindings/test/test_attributes_on_types.html
+++ b/dom/bindings/test/test_attributes_on_types.html
@@ -753,7 +753,7 @@ try
 {
 test
 .
-testUnionOfBuffferSource
+testUnionOfBufferSource
 (
 buffer
 )
@@ -780,7 +780,7 @@ arrayBuffer
 .
 isShared
 Call
-testUnionOfBuffferSource
+testUnionOfBufferSource
 with
 {
 arrayBuffer
@@ -964,7 +964,7 @@ try
 {
 test
 .
-testUnionOfAllowSharedBuffferSource
+testUnionOfAllowSharedBufferSource
 (
 buffer
 )
@@ -989,7 +989,7 @@ ok
 !
 threw
 Call
-testUnionOfAllowSharedBuffferSource
+testUnionOfAllowSharedBufferSource
 with
 {
 arrayBuffer
@@ -1103,6 +1103,12 @@ Float32Array
 "
 "
 Float64Array
+"
+"
+BigInt64Array
+"
+"
+BigUint64Array
 "
 "
 DataView
@@ -1235,7 +1241,7 @@ try
 {
 test
 .
-testUnionOfBuffferSource
+testUnionOfBufferSource
 (
 array
 )
@@ -1262,7 +1268,7 @@ arrayBuffer
 .
 isShared
 Call
-testUnionOfBuffferSource
+testUnionOfBufferSource
 with
 {
 arrayType
@@ -1471,7 +1477,7 @@ try
 {
 test
 .
-testUnionOfAllowSharedBuffferSource
+testUnionOfAllowSharedBufferSource
 (
 array
 )
@@ -1496,7 +1502,7 @@ ok
 !
 threw
 Call
-testUnionOfAllowSharedBuffferSource
+testUnionOfAllowSharedBufferSource
 with
 {
 arrayType
