Bug 1784826, add some more checks to ensure that we wait for the right windows to be focused, r=mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D250460

UltraBlame original commit: 0183a12d6e88484de4a2352873235d4bc4aca58b

--- a/toolkit/content/tests/chrome/bug360437_window.xhtml
+++ b/toolkit/content/tests/chrome/bug360437_window.xhtml
@@ -340,11 +340,20 @@ arguments
 .
 info
 ;
+async
 function
 startTest
 (
 )
 {
+await
+SimpleTest
+.
+promiseFocus
+(
+window
+)
+;
 (
 async
 function
@@ -512,7 +521,7 @@ true
 ;
 BrowserTestUtils
 .
-loadURIString
+startLoadingURIString
 (
 gBrowser
 "
@@ -637,6 +646,75 @@ bar
 is
 closed
 .
+let
+focusPromise
+;
+if
+(
+browserId
+=
+=
+"
+content
+-
+remote
+"
+)
+{
+focusPromise
+=
+ContentTask
+.
+spawn
+(
+gBrowser
+null
+async
+function
+(
+)
+{
+await
+new
+Promise
+(
+resolve
+=
+>
+{
+content
+.
+document
+.
+addEventListener
+(
+"
+focus
+"
+resolve
+{
+once
+:
+true
+}
+)
+;
+}
+)
+;
+}
+)
+;
+}
+info
+(
+"
+Wait
+for
+findbarclose
+"
+)
+;
 await
 new
 Promise
@@ -664,6 +742,64 @@ gFindBar
 .
 close
 (
+)
+;
+}
+)
+;
+info
+(
+"
+Wait
+for
+document
+focus
+"
+)
+;
+await
+focusPromise
+;
+await
+SpecialPowers
+.
+spawn
+(
+gBrowser
+[
+]
+async
+function
+(
+)
+{
+Assert
+.
+equal
+(
+content
+.
+document
+.
+activeElement
+content
+.
+document
+.
+getElementById
+(
+"
+input
+"
+)
+"
+Input
+Element
+isn
+'
+t
+focused
+"
 )
 ;
 }
@@ -715,6 +851,9 @@ isn
 '
 t
 focused
+after
+find
+again
 "
 )
 ;
