Bug 1633450 - part 2: Enable synthesized `eMouseMove` on Android r=smaug
We should enable synthesized `eMouseMove` on Android too for consistency
between platforms.

Differential Revision: https://phabricator.services.mozilla.com/D251232

UltraBlame original commit: 1c859a558651b7389cd51729856e3f2de6d10a71

--- a/dom/events/test/bug426082.html
+++ b/dom/events/test/bug426082.html
@@ -34,6 +34,48 @@ id
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+meta
+name
+=
+"
+viewport
+"
+content
+=
+"
+width
+=
+device
+-
+width
+initial
+-
+scale
+=
+1
+maximum
+-
+scale
+=
+1
+user
+-
+scalable
+=
+no
+"
+>
+<
 title
 >
 Test
@@ -318,12 +360,44 @@ resolve
 ;
 }
 function
+stringifyOpenTag
+(
+aElement
+)
+{
+return
+aElement
+.
+cloneNode
+(
+false
+)
+.
+outerHTML
+;
+}
+function
 sendMouseEvent
 (
 t
 elem
 )
 {
+info
+(
+Synthesizing
+{
+t
+}
+on
+{
+stringifyOpenTag
+(
+elem
+)
+}
+)
+;
 let
 r
 =
@@ -413,6 +487,93 @@ window
 opener
 .
 ok
+;
+function
+logMouseEvent
+(
+aEvent
+)
+{
+info
+(
+{
+aEvent
+.
+type
+}
+(
+{
+aEvent
+.
+clientX
+}
+{
+aEvent
+.
+clientY
+}
+)
+on
+{
+stringifyOpenTag
+(
+event
+.
+target
+)
+}
+(
+scrollTop
+=
+{
+document
+.
+documentElement
+.
+scrollTop
+}
+)
+)
+;
+}
+addEventListener
+(
+"
+mouseover
+"
+logMouseEvent
+{
+capture
+:
+true
+}
+)
+;
+addEventListener
+(
+"
+mousedown
+"
+logMouseEvent
+{
+capture
+:
+true
+}
+)
+;
+addEventListener
+(
+"
+mousemove
+"
+logMouseEvent
+{
+capture
+:
+true
+}
+)
 ;
 /
 /
