Bug 1969288 [wpt PR 52850] - net: Perform CSP checks on fetch responses.,
Automatic update from web-platform-tests
net: Perform CSP checks on fetch responses.

Also add clarifying comments to the SRI WPT tests with
regards to the `www.` domain and how that interacts with
the integrity checks.

Lastly, adjust the casing for `Strict-Dynamic`, as in
the post-request check that should also be case-insensitive.

Closes servo/servo#36760
Fixes servo/servo#36499
Part of w3c/webappsec-csp#727
Fixes w3c/webappsec-csp#728

Signed-off-by: Josh Matthews <joshjoshmatthews.net>
Signed-off-by: Tim van der Lippe <tvanderlippegmail.com>

--

wpt-commits: 17e2e028455d9f86ae9a428fccb292b354d89ed6
wpt-pr: 52850

Differential Revision: https://phabricator.services.mozilla.com/D252812

UltraBlame original commit: e03bfa632ece2cf90574e7b2be50b8f42763bbe7

--- a/testing/web-platform/tests/content-security-policy/script-src/script-src-strict_dynamic_parser_inserted.html
+++ b/testing/web-platform/tests/content-security-policy/script-src/script-src-strict_dynamic_parser_inserted.html
@@ -24,9 +24,9 @@ are
 not
 allowed
 with
-strict
+Strict
 -
-dynamic
+Dynamic
 in
 the
 script
@@ -93,15 +93,29 @@ script
 -
 src
 '
-strict
+Strict
 -
-dynamic
+Dynamic
 '
 '
 nonce
 -
 dummy
 '
+-
+-
+>
+<
+!
+-
+-
+Strict
+-
+Dynamic
+is
+intentionally
+mixed
+case
 -
 -
 >
