Bug 1599082 - [devtools] Remove external usage of static EventEmitter methods. r=devtools-reviewers,jdescottes.
Replace those with inheritance/decorations, extends classes that needed it.
Next patch in stack will remove the static methods alltogether.

Differential Revision: https://phabricator.services.mozilla.com/D267589

UltraBlame original commit: 09d7269654e65146da3dfe4fe73fd5e7bf8c4456

--- a/devtools/server/tests/chrome/test_memory_gc_events.html
+++ b/devtools/server/tests/chrome/test_memory_gc_events.html
@@ -169,22 +169,6 @@ waitForExplicitFinish
 (
 )
 ;
-const
-EventEmitter
-=
-require
-(
-"
-devtools
-/
-shared
-/
-event
--
-emitter
-"
-)
-;
 (
 async
 function
@@ -210,29 +194,31 @@ attach
 )
 ;
 const
-gotGcEvent
+onGcEvent
 =
-new
-Promise
-(
-resolve
-=
->
-{
-EventEmitter
-.
-on
-(
 memory
+.
+once
+(
 "
 garbage
 -
 collection
 "
+)
+;
+memory
+.
+forceGarbageCollection
+(
+)
+;
+const
 gcData
 =
->
-{
+await
+onGcEvent
+;
 ok
 (
 gcData
@@ -242,25 +228,6 @@ GC
 data
 "
 )
-;
-resolve
-(
-)
-;
-}
-)
-;
-}
-)
-;
-memory
-.
-forceGarbageCollection
-(
-)
-;
-await
-gotGcEvent
 ;
 await
 memory
