--- a/testing/web-platform/tests/css/css-flexbox/cross-axis-scrollbar.html
+++ b/testing/web-platform/tests/css/css-flexbox/cross-axis-scrollbar.html
@@ -171,11 +171,76 @@ margin
 .
 flexbox
 {
+position
+:
+relative
+;
+background
+-
+color
+:
+green
+;
+}
+/
+*
+Don
+'
+t
+use
+a
+red
+background
+on
+.
+flexbox
+as
+it
+might
+show
+behind
+scrollbars
+on
+platforms
+where
+the
+track
+may
+be
+transparent
+*
+/
+.
+flexbox
+:
+:
+before
+{
+content
+:
+"
+"
+;
 background
 -
 color
 :
 red
+;
+position
+:
+absolute
+;
+inset
+:
+0
+;
+z
+-
+index
+:
+-
+1
 ;
 }
 .
