Bug 1994939 - [devtools] Add test for editing shadow DOM constructed rule. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D269007

UltraBlame original commit: 67c24cfbbd984a1e9533734d967b2577c01e1468

--- a/devtools/client/inspector/rules/test/doc_cssom.html
+++ b/devtools/client/inspector/rules/test/doc_cssom.html
@@ -123,6 +123,110 @@ bold
 1
 )
 ;
+/
+/
+Add
+a
+shadow
+dom
+root
+and
+a
+h2
+element
+inside
+it
+const
+shadow
+=
+document
+.
+getElementById
+(
+"
+host
+"
+)
+.
+attachShadow
+(
+{
+mode
+:
+"
+open
+"
+}
+)
+;
+const
+shadowEl
+=
+document
+.
+createElement
+(
+"
+h2
+"
+)
+;
+shadowEl
+.
+textContent
+=
+"
+Hello
+from
+the
+shadow
+DOM
+"
+;
+shadow
+.
+appendChild
+(
+shadowEl
+)
+;
+const
+shadowDomStyleSheet
+=
+new
+CSSStyleSheet
+(
+)
+;
+shadowDomStyleSheet
+.
+insertRule
+(
+"
+h2
+{
+color
+:
+tomato
+;
+background
+-
+color
+:
+gold
+;
+}
+"
+)
+;
+shadow
+.
+adoptedStyleSheets
+=
+[
+shadowDomStyleSheet
+]
+;
 }
 ;
 <
@@ -156,6 +260,18 @@ target
 >
 the
 ocean
+<
+/
+div
+>
+<
+div
+id
+=
+"
+host
+"
+>
 <
 /
 div
