--- a/testing/web-platform/tests/sanitizer-api/sanitizer-modifiers.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-modifiers.tentative.html
@@ -44,6 +44,24 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+/
+support
+/
+util
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -53,1167 +71,6 @@ body
 <
 script
 >
-function
-is_same_sanitizer_name
-(
-a
-b
-)
-{
-return
-a
-.
-name
-=
-=
-=
-b
-.
-name
-&
-&
-a
-.
-namespace
-=
-=
-=
-b
-.
-namespace
-;
-}
-/
-/
-https
-:
-/
-/
-pr
--
-preview
-.
-s3
-.
-amazonaws
-.
-com
-/
-otherdaniel
-/
-purification
-/
-pull
-/
-296
-.
-html
-#
-sanitizerconfig
--
-valid
-function
-assert_config_is_valid
-(
-config
-)
-{
-/
-/
-The
-config
-has
-either
-an
-elements
-or
-a
-removeElements
-key
-but
-not
-both
-.
-assert_false
-(
-"
-elements
-"
-in
-config
-&
-&
-"
-removeElements
-"
-in
-config
-"
-Either
-elements
-or
-a
-removeElements
-but
-not
-both
-"
-)
-;
-assert_true
-(
-"
-elements
-"
-in
-config
-|
-|
-"
-removeElements
-"
-in
-config
-"
-Either
-elements
-or
-a
-removeElements
-"
-)
-;
-/
-/
-The
-config
-has
-either
-an
-attributes
-or
-a
-removeAttributes
-key
-but
-not
-both
-.
-assert_false
-(
-"
-attributes
-"
-in
-config
-&
-&
-"
-removeAttributes
-"
-in
-config
-"
-Either
-attributes
-or
-a
-removeAttributes
-but
-not
-both
-"
-)
-;
-assert_true
-(
-"
-attributes
-"
-in
-config
-|
-|
-"
-removeAttributes
-"
-in
-config
-"
-Either
-attributes
-or
-removeAttributes
-"
-)
-;
-/
-/
-If
-both
-config
-[
-elements
-]
-and
-config
-[
-replaceWithChildrenElements
-]
-exist
-then
-the
-difference
-of
-config
-[
-elements
-]
-and
-config
-[
-replaceWithChildrenElements
-]
-is
-empty
-.
-if
-(
-config
-.
-elements
-&
-&
-config
-.
-replaceWithChildrenElements
-)
-{
-for
-(
-let
-element
-of
-config
-.
-elements
-)
-{
-assert_false
-(
-config
-.
-replaceWithChildrenElements
-.
-some
-(
-(
-replaceElement
-)
-=
->
-is_same_sanitizer_name
-(
-element
-replaceElement
-)
-)
-replaceWithChildrenElements
-should
-not
-contain
-{
-element
-.
-name
-}
-)
-;
-}
-}
-/
-/
-If
-both
-config
-[
-removeElements
-]
-and
-config
-[
-replaceWithChildrenElements
-]
-exist
-then
-the
-difference
-of
-config
-[
-removeElements
-]
-and
-config
-[
-replaceWithChildrenElements
-]
-is
-empty
-.
-if
-(
-config
-.
-removeElements
-&
-&
-config
-.
-replaceWithChildrenElements
-)
-{
-for
-(
-let
-removeElement
-of
-config
-.
-removeElements
-)
-{
-assert_false
-(
-config
-.
-replaceWithChildrenElements
-.
-some
-(
-(
-replaceElement
-)
-=
->
-is_same_sanitizer_name
-(
-removeElement
-replaceElement
-)
-)
-replaceWithChildrenElements
-should
-not
-contain
-{
-removeElement
-.
-name
-}
-)
-;
-}
-}
-/
-/
-If
-config
-[
-attributes
-]
-exists
-:
-if
-(
-config
-.
-attributes
-)
-{
-}
-else
-{
-/
-/
-config
-[
-dataAttributes
-]
-does
-not
-exist
-.
-assert_false
-(
-"
-dataAttributes
-"
-in
-config
-"
-dataAttributes
-does
-not
-exist
-"
-)
-;
-}
-}
-function
-assert_config
-(
-config
-expected
-)
-{
-const
-PROPERTIES
-=
-[
-"
-attributes
-"
-"
-removeAttributes
-"
-"
-elements
-"
-"
-removeElements
-"
-"
-replaceWithChildrenElements
-"
-"
-comments
-"
-"
-dataAttributes
-"
-]
-;
-/
-/
-Prevent
-some
-typos
-in
-the
-expected
-config
-.
-for
-(
-let
-key
-of
-Object
-.
-keys
-(
-expected
-)
-)
-{
-assert_in_array
-(
-key
-PROPERTIES
-"
-expected
-"
-)
-;
-}
-for
-(
-let
-key
-of
-Object
-.
-keys
-(
-config
-)
-)
-{
-assert_in_array
-(
-key
-PROPERTIES
-"
-config
-"
-)
-;
-}
-assert_config_is_valid
-(
-config
-)
-;
-/
-/
-XXX
-dataAttributes
-/
-/
-XXX
-comments
-/
-/
-XXX
-duplications
-/
-/
-XXX
-other
-consistency
-checks
-function
-assert_attrs
-(
-key
-config
-expected
-prefix
-=
-"
-config
-"
-)
-{
-/
-/
-XXX
-we
-allow
-specifying
-only
-a
-subset
-for
-expected
-.
-if
-(
-!
-(
-key
-in
-expected
-)
-)
-{
-return
-;
-}
-if
-(
-expected
-[
-key
-]
-=
-=
-=
-undefined
-)
-{
-assert_false
-(
-key
-in
-config
-Unexpected
-'
-{
-key
-}
-'
-in
-{
-prefix
-}
-)
-;
-return
-;
-}
-assert_true
-(
-key
-in
-config
-Missing
-'
-{
-key
-}
-'
-from
-{
-prefix
-}
-)
-;
-assert_equals
-(
-config
-[
-key
-]
-?
-.
-length
-expected
-[
-key
-]
-.
-length
-{
-prefix
-}
-.
-{
-key
-}
-.
-length
-)
-;
-for
-(
-let
-i
-=
-0
-;
-i
-<
-expected
-[
-key
-]
-.
-length
-;
-i
-+
-+
-)
-{
-let
-attribute
-=
-expected
-[
-key
-]
-[
-i
-]
-;
-if
-(
-typeof
-attribute
-=
-=
-=
-"
-string
-"
-)
-{
-assert_object_equals
-(
-config
-[
-key
-]
-[
-i
-]
-{
-name
-:
-attribute
-namespace
-:
-null
-}
-{
-prefix
-}
-.
-{
-key
-}
-[
-{
-i
-}
-]
-should
-match
-)
-;
-}
-else
-{
-assert_object_equals
-(
-config
-[
-key
-]
-[
-i
-]
-attribute
-{
-prefix
-}
-.
-{
-key
-}
-[
-{
-i
-}
-]
-should
-match
-)
-;
-}
-}
-}
-assert_attrs
-(
-"
-attributes
-"
-config
-expected
-)
-;
-assert_attrs
-(
-"
-removeAttributes
-"
-config
-expected
-)
-;
-function
-assert_elems
-(
-key
-)
-{
-if
-(
-!
-(
-key
-in
-expected
-)
-)
-{
-return
-;
-}
-if
-(
-expected
-[
-key
-]
-=
-=
-=
-undefined
-)
-{
-assert_false
-(
-key
-in
-config
-Unexpected
-'
-{
-key
-}
-'
-in
-config
-)
-;
-return
-;
-}
-assert_true
-(
-key
-in
-config
-Missing
-'
-{
-key
-}
-'
-from
-config
-)
-;
-assert_equals
-(
-config
-[
-key
-]
-?
-.
-length
-expected
-[
-key
-]
-.
-length
-{
-key
-}
-.
-length
-)
-;
-const
-XHTML_NS
-=
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-1999
-/
-xhtml
-"
-;
-for
-(
-let
-i
-=
-0
-;
-i
-<
-expected
-[
-key
-]
-.
-length
-;
-i
-+
-+
-)
-{
-let
-element
-=
-expected
-[
-key
-]
-[
-i
-]
-;
-/
-/
-To
-make
-writing
-tests
-a
-bit
-easier
-we
-also
-support
-the
-shorthand
-string
-syntax
-.
-if
-(
-typeof
-element
-=
-=
-=
-"
-string
-"
-)
-{
-let
-extra
-=
-key
-=
-=
-=
-"
-elements
-"
-?
-{
-removeAttributes
-:
-[
-]
-}
-:
-{
-}
-;
-assert_object_equals
-(
-config
-[
-key
-]
-[
-i
-]
-{
-name
-:
-element
-namespace
-:
-XHTML_NS
-.
-.
-.
-extra
-}
-{
-key
-}
-[
-{
-i
-}
-]
-should
-match
-)
-;
-}
-else
-{
-if
-(
-key
-=
-=
-=
-"
-elements
-"
-)
-{
-assert_equals
-(
-config
-[
-key
-]
-[
-i
-]
-.
-name
-element
-.
-name
-{
-key
-}
-[
-{
-i
-}
-]
-.
-name
-should
-match
-)
-;
-let
-ns
-=
-"
-namespace
-"
-in
-element
-?
-element
-.
-namespace
-:
-XHTML_NS
-;
-assert_equals
-(
-config
-[
-key
-]
-[
-i
-]
-.
-namespace
-ns
-{
-key
-}
-[
-{
-i
-}
-]
-.
-namespace
-should
-match
-)
-;
-assert_attrs
-(
-"
-attributes
-"
-config
-[
-key
-]
-[
-i
-]
-element
-config
-.
-elements
-[
-{
-i
-}
-]
-)
-;
-assert_attrs
-(
-"
-removeAttributes
-"
-config
-[
-key
-]
-[
-i
-]
-element
-config
-.
-elements
-[
-{
-i
-}
-]
-)
-;
-}
-else
-{
-assert_object_equals
-(
-config
-[
-key
-]
-[
-i
-]
-element
-{
-key
-}
-[
-{
-i
-}
-]
-should
-match
-)
-;
-}
-}
-}
-}
-assert_elems
-(
-"
-elements
-"
-)
-;
-assert_elems
-(
-"
-removeElements
-"
-)
-;
-assert_elems
-(
-"
-replaceWithChildrenElements
-"
-)
-;
-}
 const
 NS
 =
@@ -1856,11 +713,192 @@ attributes
 href
 "
 ]
+}
+]
+;
+let
+s
+=
+new
+Sanitizer
+(
+{
 removeAttributes
 :
 [
 "
+id
+"
+]
+elements
+:
+ELEMENTS
+}
+)
+;
+assert_false
+(
+s
+.
+allowAttribute
+(
+"
+class
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+"
+id
+"
+]
+elements
+:
+ELEMENTS
+}
+)
+;
+assert_true
+(
+s
+.
+allowAttribute
+(
+"
+id
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+]
+elements
+:
+ELEMENTS
+}
+)
+;
+assert_false
+(
+s
+.
+allowAttribute
+(
+"
+href
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+]
+elements
+:
+ELEMENTS
+}
+)
+;
+assert_false
+(
+s
+.
+allowAttribute
+(
+"
 title
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+]
+elements
+:
+ELEMENTS
+}
+)
+;
+}
+"
+sanitizer
+.
+allowAttribute
+(
+)
+with
+global
+removeAttributes
+and
+element
+'
+s
+attributes
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+const
+ELEMENTS
+=
+[
+{
+name
+:
+"
+div
+"
+removeAttributes
+:
+[
+"
+href
 "
 ]
 }
@@ -2020,7 +1058,10 @@ with
 global
 removeAttributes
 and
-elements
+element
+'
+s
+removeAttributes
 "
 )
 ;
@@ -2637,13 +1678,6 @@ attributes
 [
 "
 class
-"
-]
-removeAttributes
-:
-[
-"
-id
 "
 ]
 }
@@ -2701,6 +1735,216 @@ attributes
 class
 "
 ]
+}
+]
+}
+)
+;
+assert_true
+(
+s
+.
+removeAttribute
+(
+"
+dir
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+"
+dir
+"
+"
+title
+"
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+attributes
+:
+[
+"
+class
+"
+]
+}
+]
+}
+)
+;
+assert_true
+(
+s
+.
+removeAttribute
+(
+"
+class
+"
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+"
+class
+"
+"
+dir
+"
+"
+title
+"
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+attributes
+:
+[
+]
+}
+]
+}
+)
+;
+}
+"
+sanitizer
+.
+removeAttribute
+(
+)
+with
+global
+removeAttributes
+and
+element
+'
+s
+attributes
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+let
+s
+=
+new
+Sanitizer
+(
+{
+removeAttributes
+:
+[
+"
+title
+"
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+removeAttributes
+:
+[
+"
+id
+"
+]
+}
+]
+}
+)
+;
+assert_false
+(
+s
+.
+removeAttribute
+(
+{
+name
+:
+"
+title
+"
+namespace
+:
+null
+}
+)
+)
+;
+assert_config
+(
+s
+.
+get
+(
+)
+{
+removeAttributes
+:
+[
+"
+title
+"
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
 removeAttributes
 :
 [
@@ -2737,10 +1981,10 @@ removeAttributes
 :
 [
 "
-title
-"
-"
 dir
+"
+"
+title
 "
 ]
 elements
@@ -2752,13 +1996,6 @@ name
 "
 div
 "
-attributes
-:
-[
-"
-class
-"
-]
 removeAttributes
 :
 [
@@ -2795,13 +2032,13 @@ removeAttributes
 :
 [
 "
-title
-"
-"
 dir
 "
 "
 id
+"
+"
+title
 "
 ]
 elements
@@ -2813,71 +2050,6 @@ name
 "
 div
 "
-attributes
-:
-[
-"
-class
-"
-]
-removeAttributes
-:
-[
-]
-}
-]
-}
-)
-;
-assert_true
-(
-s
-.
-removeAttribute
-(
-"
-class
-"
-)
-)
-;
-assert_config
-(
-s
-.
-get
-(
-)
-{
-removeAttributes
-:
-[
-"
-title
-"
-"
-dir
-"
-"
-id
-"
-"
-class
-"
-]
-elements
-:
-[
-{
-name
-:
-"
-div
-"
-attributes
-:
-[
-]
 removeAttributes
 :
 [
@@ -2898,7 +2070,10 @@ with
 global
 removeAttributes
 and
-elements
+element
+'
+s
+removeAttributes
 "
 )
 ;
@@ -2966,9 +2141,6 @@ get
 elements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -2979,6 +2151,9 @@ namespace
 :
 NS
 }
+"
+p
+"
 ]
 replaceWithChildrenElements
 :
@@ -3013,9 +2188,6 @@ get
 elements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -3026,6 +2198,9 @@ namespace
 :
 NS
 }
+"
+p
+"
 ]
 replaceWithChildrenElements
 :
@@ -3190,9 +2365,6 @@ get
 removeElements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -3203,6 +2375,9 @@ namespace
 :
 NS
 }
+"
+p
+"
 ]
 replaceWithChildrenElements
 :
@@ -3244,9 +2419,6 @@ get
 removeElements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -3257,6 +2429,9 @@ namespace
 :
 NS
 }
+"
+p
+"
 ]
 replaceWithChildrenElements
 :
@@ -3291,9 +2466,6 @@ get
 removeElements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -3304,6 +2476,9 @@ namespace
 :
 NS
 }
+"
+p
+"
 "
 span
 "
@@ -3341,9 +2516,6 @@ get
 removeElements
 :
 [
-"
-p
-"
 {
 name
 :
@@ -3355,10 +2527,13 @@ namespace
 NS
 }
 "
-span
-"
-"
 b
+"
+"
+p
+"
+"
+span
 "
 ]
 replaceWithChildrenElements
@@ -3516,10 +2691,10 @@ replaceWithChildrenElements
 a
 "
 "
-span
-"
-"
 b
+"
+"
+span
 "
 ]
 elements
@@ -3677,10 +2852,10 @@ replaceWithChildrenElements
 a
 "
 "
-span
-"
-"
 b
+"
+"
+span
 "
 ]
 removeElements
@@ -3801,9 +2976,6 @@ get
 elements
 :
 [
-"
-a
-"
 {
 name
 :
@@ -3814,6 +2986,9 @@ namespace
 :
 NS
 }
+"
+a
+"
 ]
 replaceWithChildrenElements
 :
@@ -3848,9 +3023,6 @@ get
 elements
 :
 [
-"
-a
-"
 {
 name
 :
@@ -3861,6 +3033,9 @@ namespace
 :
 NS
 }
+"
+a
+"
 "
 b
 "
@@ -5278,26 +4453,6 @@ class
 }
 )
 ;
-/
-/
-XXX
-https
-:
-/
-/
-github
-.
-com
-/
-WICG
-/
-sanitizer
--
-api
-/
-issues
-/
-305
 assert_true
 (
 s
@@ -5318,6 +4473,9 @@ id
 "
 "
 dir
+"
+"
+lang
 "
 ]
 removeAttributes
@@ -5359,11 +4517,7 @@ dir
 ]
 removeAttributes
 :
-[
-"
-lang
-"
-]
+undefined
 }
 ]
 }
@@ -5393,6 +4547,9 @@ id
 "
 dir
 "
+"
+lang
+"
 ]
 removeAttributes
 :
@@ -5433,11 +4590,7 @@ dir
 ]
 removeAttributes
 :
-[
-"
-lang
-"
-]
+undefined
 }
 ]
 }
