Bug 1993572 [wpt PR 55314] - [webaudio-testharness] Migrate audiobuffersource-multi-channels.html, a=testonly
Automatic update from web-platform-tests
[webaudio-testharness] Migrate audiobuffersource-multi-channels.html

Convert audiobuffersource-multi-channels.html from the legacy audit.js
runner to pure testharness.js

Bug: 396477778
Change-Id: I12be99f3f7522bc1806871ec6a77eefc7901813c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7002987
Reviewed-by: Michael Wilson <mjwilsonchromium.org>
Reviewed-by: Hongchan Choi <hongchanchromium.org>
Commit-Queue: Saqlain <2mesaqlaingmail.com>
Cr-Commit-Position: refs/heads/main{#1527747}

--

wpt-commits: c0c16af998c3cbd9bcef24c527ea67f6395a324d
wpt-pr: 55314

UltraBlame original commit: 090125e4207159eabd2e9c50d3e9ec87bdf16761

--- a/testing/web-platform/tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-multi-channels.html
+++ b/testing/web-platform/tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-multi-channels.html
@@ -4,21 +4,6 @@ DOCTYPE
 html
 >
 <
-!
--
--
-Test
-AudioBufferSourceNode
-supports
-5
-.
-1
-channel
-.
--
--
->
-<
 html
 >
 <
@@ -27,13 +12,14 @@ head
 <
 title
 >
-audiobuffersource
--
-multi
--
-channels
+Test
+AudioBufferSourceNode
+supports
+5
 .
-html
+1
+channel
+playback
 <
 /
 title
@@ -103,25 +89,6 @@ webaudio
 /
 resources
 /
-audit
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-webaudio
-/
-resources
-/
 mix
 -
 testing
@@ -142,65 +109,42 @@ body
 >
 <
 script
-id
-=
-"
-layout
--
-test
--
-code
-"
 >
-let
-audit
-=
-Audit
+/
+/
+Test
+AudioBufferSourceNode
+supports
+5
 .
-createTaskRunner
-(
-)
-;
-let
+1
+channel
+.
+/
+/
+Creating
 context
-;
-let
-expectedAudio
-;
-audit
+and
+fetching
+expected
+audio
 .
-define
+promise_test
 (
-'
-initialize
-'
+async
 (
-task
-should
 )
 =
 >
 {
-/
-/
-Create
-offline
-audio
-context
-let
+const
 sampleRate
 =
 44100
 .
 0
 ;
-should
-(
-(
-)
-=
->
-{
+const
 context
 =
 new
@@ -213,24 +157,14 @@ toneLengthSeconds
 sampleRate
 )
 ;
-}
-'
-Creating
-context
-for
-testing
-'
-)
-.
-notThrow
-(
-)
+let
+expectedAudio
 ;
-should
-(
-Audit
-.
-loadFileFromUrl
+const
+response
+=
+await
+fetch
 (
 '
 resources
@@ -246,48 +180,37 @@ expected
 wav
 '
 )
-.
-then
-(
+;
+const
 arrayBuffer
 =
->
+await
+response
+.
+arrayBuffer
+(
+)
+;
+try
 {
+expectedAudio
+=
+await
 context
 .
 decodeAudioData
 (
 arrayBuffer
 )
-.
-then
-(
-audioBuffer
-=
->
-{
-expectedAudio
-=
-audioBuffer
-;
-task
-.
-done
-(
-)
 ;
 }
-)
-.
 catch
 (
 error
-=
->
+)
 {
 assert_unreached
 (
-"
 Could
 not
 decode
@@ -295,60 +218,22 @@ audio
 data
 due
 to
-"
-+
+{
 error
 .
 message
-)
-;
-}
-)
-}
-)
-'
-Fetching
-expected
-audio
-'
-)
-.
-beResolved
-(
-)
-;
 }
 )
 ;
-audit
-.
-define
-(
-{
-label
-:
-'
-test
-'
-description
-:
-'
-AudioBufferSource
-with
-5
-.
-1
-buffer
-'
 }
-(
-task
-should
-)
-=
->
-{
-let
+/
+/
+Render
+and
+verify
+output
+.
+const
 toneBuffer
 =
 createToneBuffer
@@ -359,20 +244,19 @@ toneLengthSeconds
 6
 )
 ;
-let
+const
 source
 =
-context
-.
-createBufferSource
+new
+AudioBufferSourceNode
 (
-)
-;
-source
-.
+context
+{
 buffer
-=
+:
 toneBuffer
+}
+)
 ;
 source
 .
@@ -387,21 +271,18 @@ source
 .
 start
 (
-0
 )
 ;
+const
+renderedAudio
+=
+await
 context
 .
 startRendering
 (
 )
-.
-then
-(
-renderedAudio
-=
->
-{
+;
 /
 /
 Compute
@@ -454,12 +335,12 @@ are
 -
 32768
 .
-let
+const
 maxUlp
 =
 1
 ;
-let
+const
 threshold
 =
 maxUlp
@@ -484,7 +365,7 @@ numberOfChannels
 k
 )
 {
-should
+assert_array_approx_equals
 (
 renderedAudio
 .
@@ -492,55 +373,33 @@ getChannelData
 (
 k
 )
-'
-Rendered
-audio
-for
-channel
-'
-+
-k
-)
-.
-beCloseToArray
-(
 expectedAudio
 .
 getChannelData
 (
 k
 )
-{
-absoluteThreshold
-:
 threshold
+Rendered
+audio
+for
+channel
+{
+k
 }
 )
 ;
 }
 }
-)
+'
+AudioBufferSourceNode
+5
 .
-then
-(
-(
-)
-=
->
-task
-.
-done
-(
-)
-)
-;
-}
-)
-;
-audit
-.
-run
-(
+1
+channel
+playback
+verification
+'
 )
 ;
 <
