Bug 1995459 - [devtools] Don't escape id passed to WalkerFront#getIdrefNode. r=devtools-reviewers,ochameau.
The actor uses getElementById, so we don't need to escape the id.

Differential Revision: https://phabricator.services.mozilla.com/D269345

UltraBlame original commit: 341a953aa7154f64f866440e91e32854cd4e8913

--- a/devtools/client/inspector/markup/test/doc_markup_links.html
+++ b/devtools/client/inspector/markup/test/doc_markup_links.html
@@ -197,6 +197,49 @@ p
 p
 >
 <
+label
+for
+=
+"
+3d
+"
+id
+=
+"
+for
+-
+three
+-
+d
+"
+>
+3d
+<
+/
+label
+>
+<
+input
+id
+=
+"
+3d
+"
+type
+=
+"
+text
+"
+/
+>
+<
+/
+p
+>
+<
+p
+>
+<
 button
 >
 Send
