--- a/testing/web-platform/tests/sanitizer-api/sanitizer-config.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-config.tentative.html
@@ -2746,12 +2746,243 @@ exist
 has
 duplicates
 .
+const
+DUPLICATE_NAMES
+=
+[
+[
+"
+"
+"
+"
+]
+[
+"
+abc
+"
+"
+abc
+"
+]
+[
+"
+data
+-
+xyz
+"
+"
+data
+-
+xyz
+"
+]
+[
+"
+abc
+"
+{
+name
+:
+"
+abc
+"
+}
+]
+[
+{
+name
+:
+"
+abc
+"
+namespace
+:
+"
+xyz
+"
+}
+{
+name
+:
+"
+abc
+"
+namespace
+:
+"
+xyz
+"
+}
+]
+[
+{
+name
+:
+"
+abc
+"
+namespace
+:
+"
+"
+}
+{
+name
+:
+"
+abc
+"
+namespace
+:
+null
+}
+]
+]
+;
+/
+/
+NOTE
+:
+Elements
+and
+attributes
+have
+different
+default
+namespaces
+.
+const
+DUPLICATE_ELEMENT_NAMES
+=
+DUPLICATE_NAMES
+.
+concat
+(
+[
+[
+"
+abc
+"
+{
+name
+:
+"
+abc
+"
+namespace
+:
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xhtml
+"
+}
+]
+[
+{
+name
+:
+"
+abc
+"
+}
+{
+name
+:
+"
+abc
+"
+namespace
+:
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xhtml
+"
+}
+]
+]
+)
+;
+const
+DUPLICATE_ATTRIBUTE_NAMES
+=
+DUPLICATE_NAMES
+.
+concat
+(
+[
+[
+"
+abc
+"
+{
+name
+:
+"
+abc
+"
+namespace
+:
+null
+}
+]
+[
+{
+name
+:
+"
+abc
+"
+}
+{
+name
+:
+"
+abc
+"
+namespace
+:
+null
+}
+]
+]
+)
+;
 test
 (
 (
 )
 =
 >
+{
+for
+(
+let
+names
+of
+DUPLICATE_ELEMENT_NAMES
+)
 {
 assert_throws_js
 (
@@ -2767,24 +2998,14 @@ Sanitizer
 {
 elements
 :
-[
-"
-div
-"
-{
-name
-:
-"
-div
-"
-}
-]
+names
 }
 )
 ;
 }
 )
 ;
+}
 }
 "
 config
@@ -2805,6 +3026,14 @@ test
 =
 >
 {
+for
+(
+let
+names
+of
+DUPLICATE_ELEMENT_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -2819,24 +3048,14 @@ Sanitizer
 {
 removeElements
 :
-[
-"
-div
-"
-{
-name
-:
-"
-div
-"
-}
-]
+names
 }
 )
 ;
 }
 )
 ;
+}
 }
 "
 config
@@ -2857,6 +3076,14 @@ test
 =
 >
 {
+for
+(
+let
+names
+of
+DUPLICATE_ELEMENT_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -2871,24 +3098,14 @@ Sanitizer
 {
 replaceWithChildrenElements
 :
-[
-"
-div
-"
-{
-name
-:
-"
-div
-"
-}
-]
+names
 }
 )
 ;
 }
 )
 ;
+}
 }
 "
 config
@@ -2909,6 +3126,14 @@ test
 =
 >
 {
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -2923,24 +3148,14 @@ Sanitizer
 {
 attributes
 :
-[
-"
-title
-"
-{
-name
-:
-"
-title
-"
-}
-]
+names
 }
 )
 ;
 }
 )
 ;
+}
 }
 "
 config
@@ -2960,6 +3175,14 @@ test
 )
 =
 >
+{
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
 {
 assert_throws_js
 (
@@ -2975,24 +3198,14 @@ Sanitizer
 {
 removeAttributes
 :
-[
-"
-title
-"
-{
-name
-:
-"
-title
-"
-}
-]
+names
 }
 )
 ;
 }
 )
 ;
+}
 }
 "
 config
@@ -3045,6 +3258,17 @@ test
 =
 >
 {
+for
+(
+let
+[
+a
+b
+]
+of
+DUPLICATE_ELEMENT_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3060,16 +3284,12 @@ Sanitizer
 elements
 :
 [
-"
-div
-"
+a
 ]
 replaceWithChildrenElements
 :
 [
-"
-div
-"
+b
 ]
 }
 )
@@ -3077,6 +3297,7 @@ div
 }
 )
 ;
+}
 }
 "
 config
@@ -3133,6 +3354,17 @@ test
 =
 >
 {
+for
+(
+let
+[
+a
+b
+]
+of
+DUPLICATE_ELEMENT_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3148,16 +3380,12 @@ Sanitizer
 removeElements
 :
 [
-"
-div
-"
+a
 ]
 replaceWithChildrenElements
 :
 [
-"
-div
-"
+b
 ]
 }
 )
@@ -3165,6 +3393,7 @@ div
 }
 )
 ;
+}
 }
 "
 config
@@ -3184,6 +3413,8 @@ intersect
 ;
 /
 /
+7
+.
 If
 config
 [
@@ -3193,6 +3424,44 @@ exists
 :
 /
 /
+7
+.
+1
+.
+If
+config
+[
+elements
+]
+exists
+:
+/
+/
+7
+.
+1
+.
+1
+.
+For
+each
+element
+of
+config
+[
+elements
+]
+:
+/
+/
+7
+.
+1
+.
+1
+.
+1
+.
 Neither
 element
 [
@@ -3216,6 +3485,14 @@ test
 =
 >
 {
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3243,18 +3520,7 @@ div
 "
 attributes
 :
-[
-"
-title
-"
-{
-name
-:
-"
-title
-"
-}
-]
+names
 }
 ]
 }
@@ -3263,11 +3529,17 @@ title
 }
 )
 ;
+}
 }
 "
 Duplicates
 in
 element
+[
+attributes
+]
+with
+config
 [
 attributes
 ]
@@ -3286,6 +3558,14 @@ test
 =
 >
 {
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3298,7 +3578,7 @@ new
 Sanitizer
 (
 {
-removeAttributes
+attributes
 :
 [
 ]
@@ -3313,18 +3593,7 @@ div
 "
 removeAttributes
 :
-[
-"
-title
-"
-{
-name
-:
-"
-title
-"
-}
-]
+names
 }
 ]
 }
@@ -3333,6 +3602,7 @@ title
 }
 )
 ;
+}
 }
 "
 Duplicates
@@ -3340,6 +3610,11 @@ in
 element
 [
 removeAttributes
+]
+with
+config
+[
+attributes
 ]
 should
 not
@@ -3351,6 +3626,14 @@ allowed
 ;
 /
 /
+7
+.
+1
+.
+1
+.
+2
+.
 The
 intersection
 of
@@ -3375,6 +3658,17 @@ test
 =
 >
 {
+for
+(
+let
+[
+a
+b
+]
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3390,9 +3684,7 @@ Sanitizer
 attributes
 :
 [
-"
-title
-"
+a
 ]
 elements
 :
@@ -3406,9 +3698,7 @@ div
 attributes
 :
 [
-"
-title
-"
+b
 ]
 }
 ]
@@ -3418,6 +3708,7 @@ title
 }
 )
 ;
+}
 }
 "
 config
@@ -3438,6 +3729,14 @@ intersect
 ;
 /
 /
+7
+.
+1
+.
+1
+.
+3
+.
 element
 [
 removeAttributes
@@ -3523,6 +3822,14 @@ attributes
 ;
 /
 /
+7
+.
+1
+.
+1
+.
+4
+.
 If
 dataAttributes
 exists
@@ -3533,6 +3840,16 @@ true
 :
 /
 /
+7
+.
+1
+.
+1
+.
+4
+.
+1
+.
 element
 [
 attributes
@@ -3597,13 +3914,64 @@ foo
 }
 )
 ;
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+Sanitizer
+(
+{
+attributes
+:
+[
+]
+dataAttributes
+:
+true
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+attributes
+:
+[
+{
+name
+:
+"
+data
+-
+bar
+"
+namespace
+:
+null
+}
+]
+}
+]
+}
+)
+;
+}
+)
+;
 }
 "
-Per
--
 element
-allow
-list
+[
+attributes
+]
 with
 a
 data
@@ -3627,6 +3995,10 @@ true
 ;
 /
 /
+7
+.
+2
+.
 If
 dataAttributes
 is
@@ -3634,6 +4006,12 @@ true
 :
 /
 /
+7
+.
+2
+.
+1
+.
 config
 [
 attributes
@@ -3668,19 +4046,52 @@ Sanitizer
 attributes
 :
 [
-]
-dataAttributes
-:
-true
-attributes
-:
-[
 "
 data
 -
 bar
 "
 ]
+dataAttributes
+:
+true
+}
+)
+;
+}
+)
+;
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+Sanitizer
+(
+{
+attributes
+:
+[
+{
+name
+:
+"
+data
+-
+foo
+"
+namespace
+:
+null
+}
+]
+dataAttributes
+:
+true
 }
 )
 ;
@@ -3689,11 +4100,10 @@ bar
 ;
 }
 "
-Global
-attribute
-allow
--
-list
+config
+[
+attributes
+]
 with
 a
 data
@@ -3717,6 +4127,8 @@ true
 ;
 /
 /
+8
+.
 If
 config
 [
@@ -3726,6 +4138,34 @@ exists
 :
 /
 /
+8
+.
+1
+.
+If
+config
+[
+elements
+]
+exists
+then
+for
+each
+element
+of
+config
+[
+elements
+]
+:
+/
+/
+8
+.
+1
+.
+1
+.
 Not
 both
 element
@@ -3813,6 +4253,182 @@ removeAttributes
 ;
 /
 /
+8
+.
+1
+.
+2
+.
+Neither
+element
+[
+attributes
+]
+nor
+element
+[
+removeAttributes
+]
+if
+they
+exist
+has
+duplicates
+.
+test
+(
+(
+)
+=
+>
+{
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+Sanitizer
+(
+{
+removeAttributes
+:
+[
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+attributes
+:
+names
+}
+]
+}
+)
+;
+}
+)
+;
+}
+}
+"
+Duplicates
+in
+element
+[
+attributes
+]
+with
+config
+[
+removeAttributes
+]
+should
+not
+be
+allowed
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+for
+(
+let
+names
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+Sanitizer
+(
+{
+removeAttributes
+:
+[
+]
+elements
+:
+[
+{
+name
+:
+"
+div
+"
+removeAttributes
+:
+names
+}
+]
+}
+)
+;
+}
+)
+;
+}
+}
+"
+Duplicates
+in
+element
+[
+removeAttributes
+]
+with
+config
+[
+removeAttributes
+]
+should
+not
+be
+allowed
+.
+"
+)
+;
+/
+/
+8
+.
+1
+.
+3
+.
 The
 intersection
 of
@@ -3837,6 +4453,17 @@ test
 =
 >
 {
+for
+(
+let
+[
+a
+b
+]
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3852,9 +4479,7 @@ Sanitizer
 removeAttributes
 :
 [
-"
-class
-"
+a
 ]
 elements
 :
@@ -3868,9 +4493,7 @@ div
 attributes
 :
 [
-"
-class
-"
+b
 ]
 }
 ]
@@ -3880,6 +4503,7 @@ class
 }
 )
 ;
+}
 }
 "
 config
@@ -3900,6 +4524,12 @@ intersect
 ;
 /
 /
+8
+.
+1
+.
+4
+.
 The
 intersection
 of
@@ -3924,6 +4554,17 @@ test
 =
 >
 {
+for
+(
+let
+[
+a
+b
+]
+of
+DUPLICATE_ATTRIBUTE_NAMES
+)
+{
 assert_throws_js
 (
 TypeError
@@ -3939,9 +4580,7 @@ Sanitizer
 removeAttributes
 :
 [
-"
-class
-"
+a
 ]
 elements
 :
@@ -3955,9 +4594,7 @@ div
 removeAttributes
 :
 [
-"
-class
-"
+b
 ]
 }
 ]
@@ -3967,6 +4604,7 @@ class
 }
 )
 ;
+}
 }
 "
 config
@@ -3987,35 +4625,17 @@ intersect
 ;
 /
 /
+8
+.
+2
+.
 config
 [
 dataAttributes
 ]
-is
-an
-extension
-of
-the
-config
-[
-attributes
-]
-allow
--
-list
-.
-It
-isn
-'
-t
-compatible
-work
-with
-a
-block
--
-list
-approach
+does
+not
+exist
 .
 test
 (
@@ -4049,6 +4669,31 @@ true
 }
 )
 ;
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+new
+Sanitizer
+(
+{
+removeAttributes
+:
+[
+]
+dataAttributes
+:
+false
+}
+)
+;
+}
+)
+;
 }
 "
 Can
@@ -4061,7 +4706,7 @@ dataAttributes
 and
 config
 [
-attributes
+removeAttributes
 ]
 together
 .
