Bug 1979713 - Show Not Secure label in unified trust urlbar icon. r=fluent-reviewers,desktop-theme-reviewers,urlbar-reviewers,bolsson,dao
Differential Revision: https://phabricator.services.mozilla.com/D268047

UltraBlame original commit: 2abbe05763667a065011c448e3c5770a1c5c9bf8

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -2306,6 +2306,44 @@ icon
 /
 >
 <
+label
+id
+=
+"
+trust
+-
+label
+"
+crop
+=
+"
+center
+"
+flex
+=
+"
+1
+"
+data
+-
+l10n
+-
+id
+=
+"
+urlbar
+-
+trust
+-
+icon
+-
+notsecure
+-
+label
+"
+/
+>
+<
 /
 box
 >
@@ -3155,7 +3193,7 @@ urlbar
 -
 popup
 -
-blocked
+blocked2
 "
 /
 >
