Bug 1993997 - Test RTCEncodedVideoFrame/RTCEncodedAudioFrame copy construction on main thread. r=bwc
Differential Revision: https://phabricator.services.mozilla.com/D268397

UltraBlame original commit: d2cee2ab273d9c7b7692b9f5111851b841f1071e

--- a/testing/web-platform/tests/webrtc-encoded-transform/RTCRtpScriptTransform-sender-worker-single-frame.https.html
+++ b/testing/web-platform/tests/webrtc-encoded-transform/RTCRtpScriptTransform-sender-worker-single-frame.https.html
@@ -138,6 +138,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+helper
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -147,90 +161,6 @@ body
 <
 script
 >
-function
-areArrayBuffersEqual
-(
-buffer1
-buffer2
-)
-{
-if
-(
-buffer1
-.
-byteLength
-!
-=
-=
-buffer2
-.
-byteLength
-)
-{
-return
-false
-;
-}
-let
-array1
-=
-new
-Int8Array
-(
-buffer1
-)
-;
-var
-array2
-=
-new
-Int8Array
-(
-buffer2
-)
-;
-for
-(
-let
-i
-=
-0
-;
-i
-<
-buffer1
-.
-byteLength
-;
-+
-+
-i
-)
-{
-if
-(
-array1
-[
-i
-]
-!
-=
-=
-array2
-[
-i
-]
-)
-{
-return
-false
-;
-}
-}
-return
-true
-;
-}
 promise_test
 (
 async
