--- a/testing/web-platform/tests/webrtc-encoded-transform/tentative/RTCEncodedAudioFrame-audiolevel.html
+++ b/testing/web-platform/tests/webrtc-encoded-transform/tentative/RTCEncodedAudioFrame-audiolevel.html
@@ -200,11 +200,14 @@ getMetadata
 ;
 if
 (
+!
+(
+"
+audioLevel
+"
+in
 metadata
-=
-=
-=
-undefined
+)
 )
 {
 self
@@ -222,18 +225,23 @@ return
 }
 if
 (
-metadata
-.
-audioLevel
-<
-0
-|
-|
+!
+(
 metadata
 .
 audioLevel
 >
+=
+0
+&
+&
+metadata
+.
+audioLevel
+<
+=
 1
+)
 )
 {
 self
@@ -321,56 +329,14 @@ workerPromise
 new
 Promise
 (
-(
-resolve
-reject
-)
+r
 =
 >
-{
 worker
 .
 onmessage
 =
-t
-.
-step_func
-(
-message
-=
->
-{
-if
-(
-message
-.
-data
-=
-=
-"
-OK
-"
-)
-{
-resolve
-(
-)
-;
-}
-else
-{
-reject
-(
-message
-.
-data
-)
-;
-}
-}
-)
-;
-}
+r
 )
 ;
 await
@@ -415,8 +381,21 @@ enableReceiverTransform
 true
 )
 ;
-return
+const
+{
+data
+}
+=
+await
 workerPromise
+;
+assert_equals
+(
+data
+"
+OK
+"
+)
 ;
 }
 '
@@ -465,56 +444,14 @@ workerPromise
 new
 Promise
 (
-(
-resolve
-reject
-)
+r
 =
 >
-{
 worker
 .
 onmessage
 =
-t
-.
-step_func
-(
-message
-=
->
-{
-if
-(
-message
-.
-data
-=
-=
-"
-OK
-"
-)
-{
-resolve
-(
-)
-;
-}
-else
-{
-reject
-(
-message
-.
-data
-)
-;
-}
-}
-)
-;
-}
+r
 )
 ;
 await
@@ -559,8 +496,21 @@ enableReceiverTransform
 false
 )
 ;
-return
+const
+{
+data
+}
+=
+await
 workerPromise
+;
+assert_equals
+(
+data
+"
+OK
+"
+)
 ;
 }
 '
