Bug 1995517 - In sdpUtils et al. fix "all but" munging functions. r=bwc
Differential Revision: https://phabricator.services.mozilla.com/D269481

UltraBlame original commit: 817c9d021be836c64aef067026bb47e61d123b41

--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_audioCodecs.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_audioCodecs.html
@@ -223,21 +223,6 @@ codec
 )
 ;
 let
-otherId
-=
-sdputils
-.
-findCodecId
-(
-test
-.
-originalOffer
-.
-sdp
-otherCodec
-)
-;
-let
 id
 =
 sdputils
@@ -252,6 +237,21 @@ sdp
 codec
 )
 ;
+let
+otherId
+=
+sdputils
+.
+findCodecId
+(
+test
+.
+originalOffer
+.
+sdp
+otherCodec
+)
+;
 test
 .
 originalOffer
@@ -260,14 +260,14 @@ sdp
 =
 sdputils
 .
-removeAllButPayloadType
+removeAllButCodec
 (
 test
 .
 originalOffer
 .
 sdp
-id
+codec
 )
 ;
 ok
@@ -368,164 +368,6 @@ codec
 {
 id
 }
-should
-remain
-after
-filtering
-)
-;
-for
-(
-let
-c
-of
-codecs
-.
-filter
-(
-c
-=
->
-c
-!
-=
-codec
-)
-)
-{
-/
-/
-Remove
-rtpmaps
-for
-the
-other
-codecs
-so
-sdp
-sanity
-tests
-pass
-.
-let
-id
-=
-sdputils
-.
-findCodecId
-(
-test
-.
-originalOffer
-.
-sdp
-c
-)
-;
-test
-.
-originalOffer
-.
-sdp
-=
-sdputils
-.
-removeRtpMapForPayloadType
-(
-test
-.
-originalOffer
-.
-sdp
-id
-)
-;
-}
-ok
-(
-!
-test
-.
-originalOffer
-.
-sdp
-.
-match
-(
-new
-RegExp
-(
-a
-=
-rtpmap
-:
-{
-otherId
-}
-.
-*
-\
-\
-r
-\
-\
-n
-"
-gi
-"
-)
-)
-Rtpmap
-of
-other
-codec
-{
-otherId
-}
-should
-be
-removed
-after
-filtering
-)
-;
-ok
-(
-test
-.
-originalOffer
-.
-sdp
-.
-match
-(
-new
-RegExp
-(
-a
-=
-rtpmap
-:
-{
-id
-}
-.
-*
-\
-\
-r
-\
-\
-n
-"
-gi
-"
-)
-)
-Rtpmap
-of
-tested
-codec
 should
 remain
 after
