--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_scaleResolution_oldSetParameters.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_scaleResolution_oldSetParameters.html
@@ -557,31 +557,20 @@ createOffer
 (
 )
 ;
-if
-(
-codec
-=
-=
-"
-H264
-"
-)
-{
 offer
 .
 sdp
 =
 sdputils
 .
-removeAllButPayloadType
+removeAllButCodec
 (
 offer
 .
 sdp
-126
+codec
 )
 ;
-}
 await
 pc1
 .
