--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_basicScreenshare.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_basicScreenshare.html
@@ -257,6 +257,100 @@ sdp
 payloadType
 )
 ;
+ok
+(
+test
+.
+originalOffer
+.
+sdp
+.
+match
+(
+new
+RegExp
+(
+m
+=
+.
+*
+UDP
+/
+TLS
+/
+RTP
+/
+SAVPF
+.
+*
+{
+payloadType
+}
+[
+^
+0
+-
+9
+]
+"
+gi
+"
+)
+)
+Tested
+codec
+{
+payloadType
+}
+should
+remain
+after
+filtering
+)
+;
+ok
+(
+test
+.
+originalOffer
+.
+sdp
+.
+match
+(
+new
+RegExp
+(
+a
+=
+rtpmap
+:
+{
+payloadType
+}
+[
+^
+0
+-
+9
+]
+"
+gi
+"
+)
+)
+Tested
+codec
+{
+payloadType
+}
+rtpmap
+should
+remain
+after
+filtering
+)
+;
 }
 ]
 )
